--- a/public/home.html
+++ b/public/home.html
@@ -77,7 +77,7 @@
 
         <p class="text-2xl md:mx-2 or">or</p>
 
-        <a id="moreAboutMeBtn" class="text-center mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="projects.html">
+        <a id="moreAboutMeBtn" class="text-center mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins animate-bounce" href="projects.html">
             MY PROJECTS
             <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
