--- a/public/home.html
+++ b/public/home.html
@@ -59,11 +59,11 @@
     class="flex flex-col h-full pt-4 md:pt-16 items-center md:justify-center md:fixed size-[50%] gap-x-10 left-[30%] top-[100px] md:top-[50px] w-full md:w-fit pb-36 overflow-visible">
 
     <h1 class="text-left leading-tight">
-        <span id="mobin" class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
-        <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
+        <span id="mobin" class="uppercase text-primary text-3xl md:text-[30px] lg:text-[50px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
+        <p class="uppercase text-left text-white text-[25px] lg:text-[40px]">web developer</p>
     </h1>
 
-    <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+    <p class="py-3 leading-loose text-center w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
 
     <div class="flex flex-col md:flex-row w-[400px] md:w-fit h-[250px] md:h-[90px] gap-3 md:gap-x-5 items-center">
         <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
