--- a/public/home.html
+++ b/public/home.html
@@ -13,13 +13,13 @@
 </head>
 <body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen">
     <!--  -->
-    <div class="flex justify-center items-center w-32 h-16 relative my-10">
+    <!-- <div class="flex justify-center items-center w-32 h-16 relative my-10">
         <div class="relative bg-blue-500 w-16 h-10 rounded-full flex justify-center items-center">
             <span class="relative bottom-[1px] text-sm">projects</span>
             
         </div>
             <div class="absolute right-5 -rotate-[39deg] -bottom-1 w-0 h-0 border-13 border-solid border-transparent border-t-blue-500"></div>
-    </div>
+    </div> -->
     <!--  -->
     <!-- theme Button -->
     <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-9 right-3 top-3 z-50 /// flex justify-center items-center font-bold text-white">
